<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" tools:context=".LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginCongratulationText"
            android:id="@+id/textViewCongratulation" android:textSize="44dp" android:textIsSelectable="false"
            android:layout_gravity="center_horizontal"/>
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loginYour"
                android:id="@+id/textViewLoginYour" android:layout_row="0" android:layout_column="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/passwordYour"
                android:id="@+id/textViewPasswordYour" android:layout_row="1" android:layout_column="0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewLogin" android:layout_row="0" android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewPassword" android:layout_row="1" android:layout_column="1"/>
    </GridLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonRememberMeText"
            android:id="@+id/buttonRememberMe"
            android:onClick="onRememberMeClick"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonBackText"
            android:id="@+id/buttonLoginBack"
            android:layout_gravity="center_horizontal" android:onClick="onBackClick"/>
</LinearLayout>