<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.XSmile2008.helloworldandroid.app.service.PendingIntentVer.ServicesActivity">

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStartService"
            android:onClick="onButtonStartService"
            android:text="@string/buttonStartServiceText"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStopService"
            android:onClick="onButtonStopService"
            android:text="@string/buttonStopServiceText"
            android:layout_below="@+id/buttonStartService"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewTask1Status"
            android:id="@+id/textViewTask1Status"
            android:layout_below="@+id/buttonUnbindService"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonBindServiceText"
            android:id="@+id/buttonBindService"
            android:onClick="onButtonBindService"
            android:layout_below="@+id/buttonStopService"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonUnbindServiceText"
            android:id="@+id/buttonUnbindService"
            android:onClick="onButtonUnbindService"
            android:layout_below="@+id/buttonBindService"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTask1Status"
            android:layout_centerHorizontal="true">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:id="@+id/buttonServicesInc"
                android:onClick="onButtonServiceInc"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="500"
                android:id="@+id/textViewTaskInterval" android:layout_weight="0"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:id="@+id/buttonServicesDec"
                android:onClick="onButtonServiceDec"/>
    </LinearLayout>

</RelativeLayout>
