<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.XSmile2008.helloworldandroid.app.activity.AsyncTaskActivity">

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarAsyncTask"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textViewAsyncTaskProgress"
            android:layout_below="@+id/progressBarAsyncTask"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStartAsyncTask"
            android:onClick="onButtonStartAsyncTaskClick"
            android:text="@string/buttonStartAsyncTaskText"
            android:layout_below="@+id/textViewAsyncTaskProgress"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStopAsyncTask"
            android:onClick="onButtonStopAsyncTaskClick"
            android:text="@string/buttonStopAsyncTaskText"
            android:layout_below="@+id/buttonStartAsyncTask"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonStatusAsyncTaskText"
            android:id="@+id/buttonStatusAsyncTask"
            android:onClick="onButtonStatusAsyncTaskClick"
            android:layout_below="@+id/buttonStopAsyncTask"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
